Modify overall placement on landing page

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 body {
   display: flex;
   flex-direction: column;
+  padding: 0;
+  margin: 0;
 }
 
 .header {
@@ -74,7 +76,7 @@ body {
 }
 
 .top-page img {
-  max-height: 80%;
+  height: 60%;
 }
 
 .mid-page {
