--- a/style.css
+++ b/style.css
@@ -168,3 +168,11 @@ body {
   border-radius: 10px;
   border-style: solid;
 }
+
+button:hover {
+  background-color: darkblue;
+}
+
+button:focus {
+  background-color: gray;
+}
